{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 50,
  "lineage": "f42ab2ea-0835-6567-798c-8f026f840619",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:032073356456:security-group/sg-01ebc95de29515aa9",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ebc95de29515aa9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with control plane",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca1e77632b054ee3"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "overcookied-eks-cluster-20260115162906500100000001",
            "name_prefix": "overcookied-eks-cluster-",
            "owner_id": "032073356456",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "overcookied-eks-cluster-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Layer": "EKS",
              "ManagedBy": "Terraform",
              "Name": "overcookied-eks-cluster-sg",
              "Project": "overcookied"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe2fdd69cf5318f3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:032073356456:security-group/sg-0ca1e77632b054ee3",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca1e77632b054ee3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01ebc95de29515aa9"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01ebc95de29515aa9"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "overcookied-eks-nodes-20260115162908392400000007",
            "name_prefix": "overcookied-eks-nodes-",
            "owner_id": "032073356456",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "overcookied-eks-nodes-sg",
              "kubernetes.io/cluster/overcookied-eks": "owned"
            },
            "tags_all": {
              "Environment": "prod",
              "Layer": "EKS",
              "ManagedBy": "Terraform",
              "Name": "overcookied-eks-nodes-sg",
              "Project": "overcookied",
              "kubernetes.io/cluster/overcookied-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe2fdd69cf5318f3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "valkey",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:032073356456:security-group/sg-06160e8bbd2fa915d",
            "description": "Security group for Valkey cache",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06160e8bbd2fa915d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Valkey from EKS nodes",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca1e77632b054ee3"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "overcookied-valkey-sg",
            "name_prefix": "",
            "owner_id": "032073356456",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "overcookied-valkey-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Layer": "EKS",
              "ManagedBy": "Terraform",
              "Name": "overcookied-valkey-sg",
              "Project": "overcookied"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe2fdd69cf5318f3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_security_group.nodes",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with control plane",
            "from_port": 443,
            "id": "sgrule-3438510382",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01ebc95de29515aa9",
            "security_group_rule_id": "sgr-0ecc27ffdc7b329f4",
            "self": false,
            "source_security_group_id": "sg-0ca1e77632b054ee3",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_security_group.nodes",
            "data.terraform_remote_state.base"
          ]
        }
      ]
    }
  ]
}